1.1.0 Remove Eclipse Depencies