@@ -4,7 +4,7 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>rentasad</groupId>
   <artifactId>rentasad.library.basicTools.printTool</artifactId>
-  <version>1.0.0</version>
+  <version>1.1.0</version>
   <name>gustini.library.basicTools.printTool</name>
   <url>http://maven.apache.org</url>
   <properties>
@@ -12,13 +12,25 @@
   </properties>
   	<build>
 		<plugins>
-			<plugin>
+						<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
-				<version>3.1</version>
+				<version>3.8.1</version>
 				<configuration>
-					<encoding>utf-8</encoding>
-					<source>1.8</source>
-					<target>1.8</target>
+					<!-- <source>1.8</source> -->
+					<release>15</release>
+					<compilerArgs>
+						--enable-preview
+					</compilerArgs>
+				</configuration>
+			</plugin>
+			<!--  The Maven-Surefire-Plugin is needed to make Unittests while building-->
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-surefire-plugin</artifactId>
+				<version>2.14.1</version>
+				<configuration>
+					<argLine>--enable-preview</argLine>
 				</configuration>
 			</plugin>
 		</plugins>
@@ -38,7 +50,7 @@
     		<dependency>
     			<groupId>rentasad</groupId>
     			<artifactId>rentasad.library.db</artifactId>
-    			<version>1.0.0</version>
+    			<version>1.1.0</version>
     		</dependency>
   </dependencies>
 </project>
